# payma

./: .env  Cargo.toml  Dockerfile  README.md  build.sh
split/: README.md
split/contracts/: Contract.sol
src/: constants.rs  crypto.rs  lib.rs  main.rs  misc.rs  wallet.rs
src/cry/: decry.sh  poison.rs
src/lle/: README.md  poison.rs
thirdweb/: README.md  api.py
